--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -4,9 +4,10 @@ $tablet: 768px;
 $desktop: 1024px;
 
 $primary-font-family: 'Roboto', sans-serif;
-$font-color: #ffffff;
-$line-color: #ff6b08;
+$light-color: #ffffff;
+$dark-color: #000000;
 $notification-color: #ff001b;
-$btn-color: #ff6b01;
+$accent-color: #ff6b01;
+$grey-color: #333333;
 
 $timing-function: cubic-bezier(0.4, 0, 0.2, 1);
