--- a/src/sass/_theme-togle.scss
+++ b/src/sass/_theme-togle.scss
@@ -3,13 +3,13 @@ body {
 }
 
 .light-theme {
-  background-color: #fff;
-  color: #333333;
+  background-color: $light-color;
+  color: $grey-color;
 }
 
 .dark-theme {
-  background-color: #333333;
-  color: #fff;
+  background-color: $grey-color;
+  color: $light-color;
 }
 
 .toolbar {
@@ -25,7 +25,7 @@ body {
 }
 
 .theme-switch__icon {
-  color: #fff;
+  color: $light-color;
   height: 18px;
   width: 24px;
   margin-left: 8px;
@@ -68,10 +68,10 @@ body {
   color: transparent;
 
   user-select: none;
-  background-color: #333;
+  background-color: $grey-color;
   background-color: transparent;
 
-  border: 2px solid $line-color;
+  border: 2px solid $accent-color;
   border-radius: inherit;
   z-index: 1;
   cursor: pointer;
@@ -79,7 +79,7 @@ body {
 
 .theme-switch__marker {
   position: relative;
-  background-color: #fff;
+  background-color: $light-color;
 
   width: 20px;
   height: 20px;
@@ -101,7 +101,7 @@ body {
 
 body.dark-theme {
   & .card__name {
-    color: white;
+    color: $light-color;
   }
 
   & .modal--close {
@@ -117,7 +117,7 @@ body.dark-theme {
   }
 
   & .tui-page-btn {
-    color: #ffffff;
+    color: $light-color;
   }
 
   & .tui-first {
