--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,20 +1,12 @@
 @import './base/variables';
 @import './base/basic';
 @import './header';
+@import './card-list';
+@import './pagination';
+@import './modal-one-film';
+@import './trailer';
+@import './footer';
+@import './genres';
+@import './arrow-top';
+@import './modal-students';
 @import './theme-togle';
-
-// --------------------------------------------
-// @import './base/variables';
-// @import './header';
-// @import './footer';
-// @import './card-list';
-// @import './modal-one-film';
-// @import './base/basic';
-// @import './base/container';
-// @import './base/visually-hidden';
-// @import './pagination.scss';
-// @import './theme-togle';
-// @import './trailer';
-// @import './modal-students';
-// @import './arrow-top';
-// @import './genres';
