--- a/src/templates/modal-card.hbs
+++ b/src/templates/modal-card.hbs
@@ -62,7 +62,17 @@
     <p class='about-info'>{{overview}}</p>
   </div>
   <div class='modal__content_right-btns'>
-    <button type='button' class='modal-btns modal-btns--watched' id='watchedjs'>add to watched</button>
-    <button type='button' class='modal-btns modal-btns--queue'>add to queue</button>
+    <button
+      type='button'
+      class='modal-btns modal-btns--watched'
+      data-key='watched'
+      data-status='add'
+    ></button>
+    <button
+      type='button'
+      class='modal-btns modal-btns--queue'
+      data-key='queue'
+      data-status='add'
+    ></button>
   </div>
 </div>
