--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,11 +1,13 @@
 <footer class="footer">
-  <div class="container footer__container footer__text">
-    <span>© 2021 | All Rights Reserved</span>
-    <span>| Developed with</span>
-    <svg width="14" height="13">
-      <use href="./images/svg/sprite.svg#icon-heart" />
-    </svg>
-    <span>by</span>
-    <span id="open-button" class="footer__text footer__link">GoIT Students</span>
+  <div class="container">
+    <div class="footer__container footer__text">
+      <span>© 2021 | All Rights Reserved |</span>
+      <span>Developed with</span>
+      <svg width="14" height="13">
+        <use href="./images/svg/sprite.svg#icon-heart" />
+      </svg>
+      <span>by</span>
+      <span id="open-button" class="footer__text footer__link">GoIT Students</span>
+    </div>
   </div>
 </footer>
