--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,15 +5,19 @@
         <svg class="theme-switch__icon sun" role="img" aria-label="Иконка солнца">
           <use href="./images/svg/sprite.svg#sun"></use>
         </svg>
-    
+
         <div class="theme-switch__control">
-          <input class="theme-switch__toggle" type="checkbox" name="theme" id="theme-switch-toggle"
-            aria-label="Переключить между тёмной и светлой темой" />
-          <label aria-hidden="true" class="theme-switch__track" for="theme-switch-toggle">
-          </label>
+          <input
+            class="theme-switch__toggle"
+            type="checkbox"
+            name="theme"
+            id="theme-switch-toggle"
+            aria-label="Переключить между тёмной и светлой темой"
+          />
+          <label aria-hidden="true" class="theme-switch__track" for="theme-switch-toggle"> </label>
           <div aria-hidden="true" class="theme-switch__marker"></div>
         </div>
-    
+
         <svg class="theme-switch__icon" aria-label="Иконка луны">
           <use href="./images/svg/sprite.svg#moon"></use>
         </svg>
@@ -51,8 +55,8 @@
       Search result not successful. Enter the correct movie name and search again.
     </div>
     <div class="overlay transform">
-      <button type="button" class="overlay__btn js-btn-watched">watched</button>
-      <button type="button" class="overlay__btn js-btn-queue">queue</button>
+      <button type="button" class="overlay__btn js-btn-watched" data-key="watched">watched</button>
+      <button type="button" class="overlay__btn js-btn-queue" data-key="queue">queue</button>
     </div>
   </div>
 </header>
