--- a/src/sass/_arrow-top.scss
+++ b/src/sass/_arrow-top.scss
@@ -17,12 +17,12 @@
   z-index: 5;
 
   &:hover {
-    background-color: #ff6b08;
+    background-color: $accent-color;
     opacity: 1;
 
     &::after,
     &::before {
-      background-color: #ffffff;
+      background-color: $light-color;
     }
   }
 
@@ -32,7 +32,7 @@
     position: absolute;
     height: 18px;
     width: 4px;
-    background-color: #000000;
+    background-color: $dark-color;
     top: 13px;
     transition: all 250ms ease-in-out;
   }
