--- a/src/sass/_card-list.scss
+++ b/src/sass/_card-list.scss
@@ -36,13 +36,13 @@
 .card__name {
   text-transform: uppercase;
 
-  color: #000000;
+  color: $dark-color;
 }
 
 .card__description {
   display: flex;
   align-items: center;
-  color: #ff6b08;
+  color: $accent-color;
 }
 
 .card__genres {
@@ -57,7 +57,7 @@
   height: 10px;
   margin-left: 5px;
   margin-right: 5px;
-  background-color: #ff6b08;
+  background-color: $accent-color;
 }
 
 .card__year {
@@ -71,8 +71,8 @@
   width: 36px;
   height: 16px;
   border-radius: 5px;
-  color: #ffffff;
-  background-color: #ff6b08;
+  color: $light-color;
+  background-color: $accent-color;
 }
 
 @media screen and (min-width: 768px) {
