--- a/src/sass/_trailer.scss
+++ b/src/sass/_trailer.scss
@@ -1,4 +1,6 @@
 .trailer__container {
+  width: 100%;
+  height: 20%;
   z-index: 1;
   position: absolute;
   top: 50%;
@@ -6,6 +8,14 @@
   transform: translate(-50%, -50%);
   background-color: #000000;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.9);
+
+  @media screen and (min-width: 768px) {
+    height: 70%;
+  }
+
+  @media screen and (min-width: 1024px) {
+    height: 90%;
+  }
 }
 
 .trailer__icon {
