--- a/src/templates/trailer.hbs
+++ b/src/templates/trailer.hbs
@@ -1,6 +1,6 @@
 <iframe
-  width='560'
-  height='315'
+  width='100%'
+  height='100%'
   src='{{sourse}}'
   title='YouTube video player'
   frameborder='0'
